recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:5: error: not found: value o
for (i <- o to l.length-1) {
          ^