recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {

var present:Boolean = false

for (i <- o to l.length-1) {
	if (v == l(i)) {
		present = true
	}
}
	
}
